search-ui: fix result thumbnail alignment
* Aligns thumbnails in results to the right edge of the screen.

--- a/cds/modules/theme/static/scss/cds.scss
+++ b/cds/modules/theme/static/scss/cds.scss
@@ -219,7 +219,7 @@ a[ng-click]{
 }
 
 .cds-media-body {
-  width: auto;
+  width: 100%;
 }
 
 .cds-media-summary {
